交易和支付的页面

--- a/kankan/pages/main/products/detail.html
+++ b/kankan/pages/main/products/detail.html
@@ -198,7 +198,12 @@
 			<span class="lang" data-locale="det_send"><b></b></span>
 		</button>
 			</div>
-			<div  id="traslateing" class="lang" data-locale="stautestext"></div>
+			<div id="traslateing" class="lang" data-locale="stautestext"></div>
+			<!--底部新加的样式-->
+			<div id="bottom_price" class="gratis_goods">
+		        <div class="mui-pull-left">&yen;<span>3,000</span></div>
+		        <a href="../../transaction/payment.html" class="mui-pull-right lang">去购买</a>
+		    </div>
 			<input type="hidden" name="userid" id="userid" value="" />
 			<input type="hidden" name="myid" id="myid" value="" />
 			<input type="hidden" name="comm_num" id="comm_num" value="" />
