商品发布页面装成

--- a/kankan/pages/main/products/product_login.html
+++ b/kankan/pages/main/products/product_login.html
@@ -112,7 +112,7 @@
 				<div>
 					<h5 class="ka_proloh5 lang" data-locale="commodity_price" style="margin: 1.5em 0 1.5em 0.5em"></h5>
 					<div class="inputPrice">
-						<input id="number_price" type="number" onKeypress="return (/[\d]/.test(String.fromCharCode(event.keyCode)))" onchange="getNumber()" class="inputNumber" disabled="true"/>
+						<input id="number_price" type="number" onkeyup="getNumber()" class="inputNumber" disabled="true"/>
 						<span class="inputSpan">&yen;<span id="input_price"></span></span>
 					</div>
                 </div>
@@ -193,14 +193,18 @@
 				return true;
 			}
 		});
-	$(function() {
-		$(".ka_noborder").attr("placeholder", TextMessage.commodity_descriptionlength);
-		$(".mui-title").html(TextMessage.commodity_login);
-	});
+		$(function() {
+			$(".ka_noborder").attr("placeholder", TextMessage.commodity_descriptionlength);
+			$(".mui-title").html(TextMessage.commodity_login);
+		});
 	var id;
 	var testarr=[];
 	var catearrs=[{data:[]}];
 	var positions='0';
+	//getprice
+	var price_max = 0;
+	var price_min = 0;
+	var charge_rate = 0; //rate
 	var mobileSelect4;
 	var stautsSelect;
 	var stautesposition='0';
@@ -217,7 +221,20 @@
 						id: '3',
 						value: TextMessage.prostaute3
 					}]}];
+		
 	mui.plusReady(function() {
+		var params = {};
+		Repository.Commodity.getPrice(params, {
+			ok: function(data) {
+				console.log("success");
+				showPrice(data);
+			},
+			ng: function(data) {
+				console.log("error:"+data);
+				Log.d(data);
+			}
+		});
+		
 		var self = plus.webview.currentWebview();
 		id = self.eid;
 		if(id){
@@ -279,8 +296,13 @@
 				}
 			});
 		}
-		
 	});
+	function showPrice(results) {
+		var resultsData = results.data;
+		price_max = resultsData[0].price_max;
+		price_min = resultsData[1].price_min;
+		charge_rate = resultsData[2].charge_rate;
+	}
 	window.addEventListener("refresh", function(event) {
 		location.reload();
 	});
@@ -297,21 +319,13 @@
 	//getNumber
 	function getNumber() {
 		var number_price = $("#number_price").val();
-		/*if (number_price.length == 0) {
-			mui.toast(TextMessage.pro_pricenulltest, {
-				duration: 'short',
-				type: 'div'
-		    });
-		}*/
-		if (parseInt(number_price) <300 || parseInt(number_price) >9999999 ) {
-			mui.toast(TextMessage.numberRangeText, {
-				duration: 'short',
-				type: 'div'
-		    });
+		if (parseInt(number_price) < price_min || parseInt(number_price) > price_max ) {
+		    mui.alert(TextMessage.numberRangeText);
 		}
+		
 		$("#input_price").html(parseFloat(Math.floor(number_price)).toLocaleString());
-	    $("#trans_fees").html(parseFloat(Math.floor(number_price * 0.1)).toLocaleString());
-	    $("#trading_income").html(parseFloat(Math.floor(number_price - number_price * 0.1)).toLocaleString());
+	    $("#trans_fees").html(parseFloat(Math.floor(number_price * charge_rate / 100)).toLocaleString());
+	    $("#trading_income").html(parseFloat(Math.floor(number_price) - Math.floor(number_price * charge_rate / 100)).toLocaleString());
 	}
 	function closepicker(){
 		preventKeyBoardSubmit.closekeybord();
@@ -378,9 +392,11 @@
 		var image2=results.data.imges[2];
 		var image3=results.data.imges[3];
 		var classify_id=results.data.classify_id;
-		var price=results.data.price;
 		var state=results.data.state;
 		var commstautes=results.data.comm_status;
+	    var price = results.data.price;
+	    var rate = results.data.service_charge;
+	    var profile = results.data.profit;
 		if(commstautes=="0"){
 		//waste product
 			$("#waste").show();
@@ -399,8 +415,11 @@
 		document.getElementById('exchange').value=exchange;
 		document.getElementById('gratis').value=gratis;
 		document.getElementById('classify_id').value=classify_id;
-		document.getElementById('price').value=price;
 		document.getElementById('comm_state').value=state;
+		$("#number_price").val(price);
+		$("#input_price").html(parseFloat(price).toLocaleString());
+		$("#trans_fees").html(parseFloat(rate).toLocaleString());
+		$("#trading_income").html(parseFloat(profile).toLocaleString());
 		$("#stauteResult").removeClass("ka_bitian");
 		$("#stauteResult").addClass("ka_sortname");
 		if(state=="0"){
@@ -429,6 +448,7 @@
 			imagepull(3,image3.imgurl, image3.imgwidth, image3.imgheight);
 		}
 		if(business=="1"){
+			$("#number_price").removeAttr("disabled");
 			$("#pointbuybtn").removeClass("ka_exchangegrey");
 			$("#pointbuybtn").addClass("ka_exchangered");
 		}
@@ -778,6 +798,11 @@ function publishscheck(){
 		publishs();
 	}
 }
+
+function removeComma(str) { 
+    str = str.replace(/,/g, "");
+    return str; 
+} 
 //submit form
 function publishs() {
 	var buy_sell_flag = "0";
@@ -792,8 +817,10 @@ function publishs() {
 	var imges1 = $("#1").val();
 	var imges2 = $("#2").val();
 	var imges3 = $("#3").val();
-	var price = $("#price").val();
-	var number_price = $("#number_price").val();
+	var price = $("#number_price").val();
+	var service_charge = removeComma($("#trans_fees").html());
+	var profit = removeComma($("#trading_income").html());
+	
 	if(imges0 == "0" & imges1 == "0" & imges2 == "0" & imges3 == "0") {
 		mui.toast(TextMessage.pro_imagetest, {
 			duration: 'long',
@@ -833,12 +860,11 @@ function publishs() {
 		document.publishcomodity.comm_detail.focus();
 		return false;
 	}
-	if (number_price.trim()=="") {
+	if (price.length == 0) {
 		mui.toast(TextMessage.pro_pricenulltest, {
 			duration: 'long',
 			type: 'div'
 		});
-		document.publishcomodity.comm_detail.focus();
 		return false;
 	}
 	if(regStr.test(comm_detail)){
@@ -902,7 +928,8 @@ function publishs() {
 		});
 		return false;
 	}
-	$("#submit").attr("disabled","disabled");
+	
+	/*$("#submit").attr("disabled","disabled");*/
 	var params = {
 		"buy_sell_flag": buy_sell_flag,
 		"comm_name": comm_name,
@@ -919,6 +946,8 @@ function publishs() {
 	};
 	if(price!=""){
 		params.price=price;
+		params.service_charge = service_charge;
+		params.profit = profit;
 	}
 	if(id!=0){
 		var commodity_ids=$("#codid").val();
