--- a/kankan/pages/transaction/seller_account.html
+++ b/kankan/pages/transaction/seller_account.html
@@ -14,7 +14,7 @@
 
 	<body>
 		<header class="mui-bar mui-bar-nav">
-			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left" style="display: none;"></a>
+			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
 			<h1 class="mui-center mui-title lang" data-locale="designated_account"></h1>
 		</header>
 		<div class="mui-content" style="font-size: 15px;">
@@ -23,7 +23,7 @@
 				<div class="seller_bank">
 					<div class="mui-pull-left lang" style="margin-left: 1em;" data-locale="bank"></div>
 					<div id="branchResults" class="mui-pull-right lang mui-col-xs-4" data-locale="selectbank" style="margin-right: 0.5em;"></div>
-					<input type="hidden" name="branchSelect" id="branchSelect" value="" />
+					<input type="hidden" name="branch_id" id="branch_id" value="" />
 				</div>
 				<!--account type-->
 				<div class="tradeFees" style="margin-top: 2em;">
@@ -36,7 +36,7 @@
 						<li class="mui-table-view-cell" style="display: -webkit-box;">
 						    <div style="width: 100%;">
 					        	<span class="lang" data-locale="branch_number"></span>
-					        	<input type="number" id="branch_number" onchange="getBranchNumber()" onKeypress="return (/[\d]/.test(String.fromCharCode(event.keyCode)))" style="width: 30%; height: auto; padding: 0; ime-mode:Disabled;" class="mui-pull-right" placeholder="分店号"/>
+					        	<input type="number" id="branch_number" class="mui-pull-right" onchange="getBranchNumber()" onKeypress="return (/[\d]/.test(String.fromCharCode(event.keyCode)))" style="width: 30%; height: auto; padding: 0; ime-mode:Disabled;"/>
 					        </div>
 						</li>
 					</ul>
@@ -44,43 +44,31 @@
 				<!--account personal information-->
 				<div class="tradeFees" style="margin-top: 2em;">
 					<ul class="mui-table-view ka_prologbox">
-						<!--<li class="mui-table-view-cell">
-						    <span class="lang mui-col-xs-9" data-locale="account_number"></span>
-						    <span class="mui-col-xs-3 mui-pull-right" style="color: #000000;">银联</span>
-						</li>
-						<li class="mui-table-view-cell">
-						    <span class="lang mui-col-xs-9" data-locale="name_front"></span>
-						    <span class="mui-col-xs-3 mui-pull-right" style="color: #000000;">银联</span>
-						</li>
-						<li class="mui-table-view-cell">
-						    <span class="lang mui-col-xs-9" data-locale="name_behind"></span>
-						    <span class="mui-col-xs-3 mui-pull-right" style="color: #000000;">银联</span>
-						</li>-->
 						<li class="mui-table-view-cell" style="display: -webkit-box;">
 						    <div style="width: 100%;">
 					        	<span class="lang" data-locale="account_number"></span>
-					        	<input type="number" id="card_number" onchange="getCardNumber()" onKeypress="return (/[\d]/.test(String.fromCharCode(event.keyCode)))" style="width: 30%; height: auto; padding: 0;ime-mode:Disabled;" class="mui-pull-right" maxlength="7" placeholder="限7位数字"/>
+					        	<input type="number" id="card_number" onchange="getCardNumber()" onKeypress="return (/[\d]/.test(String.fromCharCode(event.keyCode)))" style="width: 30%; height: auto; padding: 0;ime-mode:Disabled;" class="mui-pull-right" maxlength="7"/>
 					        </div>
 						</li>
 						<li class="mui-table-view-cell" style="display: -webkit-box;">
 						    <div style="width: 100%;">
 					        	<span class="lang" data-locale="name_front"></span>
-					        	<input type="text" style="width: 30%; height: auto; padding: 0;" class="mui-pull-right" maxlength="7" placeholder="姓"/>
+					        	<input type="text" id="name_front" style="width: 30%; height: auto; padding: 0;" class="mui-pull-right" maxlength="7"/>
 					        </div>
 						</li>
 						<li class="mui-table-view-cell" style="display: -webkit-box;">
 						    <div style="width: 100%;">
 					        	<span class="lang" data-locale="name_behind"></span>
-					        	<input type="text" style="width: 30%; height: auto; padding: 0;" class="mui-pull-right" maxlength="7" placeholder="名"/>
+					        	<input type="text" id="name_behind" style="width: 30%; height: auto; padding: 0;" class="mui-pull-right" maxlength="7"/>
 					        </div>
 						</li>
 					</ul>
 				</div>
 				
 				<div class="lang accountDesc" data-locale="account_descriptionOne"></div>
-				<div class="lang" style="margin-left: 1em;" data-locale="account_descriptionTwo"></div>
+				<div class="lang" style="margin: 0 1em" data-locale="account_descriptionTwo"></div>
 				<div class="ka_userbox">
-					<button type="button" class="mui-btn mui-btn-red ka_prologsure lang" data-locale="next" style="margin-top: 1em;" onclick="" id=""></button>
+					<button type="button" class="mui-btn mui-btn-red ka_prologsure lang" data-locale="next" style="margin-top: 1em;" onclick="finish()" id=""></button>
 				</div>
 			</form>
 		</div>
@@ -95,24 +83,14 @@
 	<script src="../../js/mobileSelect.js" type="text/javascript"></script>
 	<script>
 		mui.init({
-			
+
 		});
+		var id;
+		var testarr=[];
 		var branchListData;
 		var accountListData;
 		var stautesposition='0';
-	    var branchData = [{data:[{
-						id: '0',
-						value: "兴业银行"
-					}, {
-						id: '1',
-						value: "交通银行"
-					}, {
-						id: '2',
-						value: "招商银行"
-					}, {
-						id: '3',
-						value: "建设银行"
-					}]}];
+	    var branchData = [{data:[]}];
 	    var accountData = [{data:[{
 						id: '0',
 						value: "兴业银行"
@@ -128,30 +106,39 @@
 					}]}];
 		mui.plusReady(function() {
 			$(".mui-content").css("height",document.body.scrollHeight);
-			branchListData= new MobileSelect({
-			    trigger: '#branchResults',
-			    title: '',
-			    wheels: branchData, 
-			    position:'0',
-			    transitionEnd:function(indexArr, data){
-			    	if(indexArr=="NAN"){
-			    		indexArr=stautesposition;
-			    	}
-			        console.log(indexArr);
-			    },
-			    callback:function(indexArr, data){
-			        console.log(data[0].id);
-			        $("#branchSelect").val(data[0].id);
-			        $("#branchResults").text(data[0].value);
-			        $("#branchResults").removeClass("ka_bitian");
-			        $("#branchResults").addClass("ka_sortname");					       
-			    }  
+			var params = {};
+			Repository.User.personal_infor(params, {
+				ok: function(data) {
+					console.log("success");
+					branchData[0].data = branchList(data);
+					console.log(branchData);
+					branchListData= new MobileSelect({
+					    trigger: '#branchResults',
+					    title: '',
+					    wheels: branchData,
+					    position:'0,0',
+					    transitionEnd:function(indexArr, data){
+					    	if(indexArr=="NAN"){
+					    		indexArr=stautesposition;
+					    	}
+					        console.log(indexArr);
+					    },
+					    callback:function(indexArr, data){
+					        $("#branch_id").val(data[0].value);
+					        $("#branchResults").addClass("ka_sortname");					       
+					    }  
+			        });
+				},
+				ng: function(data) {
+					console.log("error:"+data);
+					Log.d(data);
+				}
 			});
 			
 			accountListData= new MobileSelect({
 			    trigger: '#accountResults',
 			    title: '',
-			    wheels: branchData, 
+			    wheels: accountData,
 			    position:'0',
 			    transitionEnd:function(indexArr, data){
 			    	if(indexArr=="NAN"){
@@ -161,13 +148,48 @@
 			    },
 			    callback:function(indexArr, data){
 			        console.log(data[0].id);
-			        $("#accountSelect").val(data[0].id);
-			        $("#accountResults").text(data[0].value);
+			        $("#accountSelect").text(data[0].value);
 			        $("#accountResults").removeClass("ka_bitian");
 			        $("#accountResults").addClass("ka_sortname");					       
 			    }  
 			});
+		    var params2 = {};
+		    Repository.User.getpersonal_bankinfor(params2, {
+				ok: function(data) {
+					var results = data.data;
+					if (results.u_traid) {
+						showPersonalInfor(results);
+					}
+				},
+				ng: function(data) {
+					console.log("error:"+data);
+					Log.d(data);
+				}
+			});
 		});
+		// get bank infor
+		function showPersonalInfor(results) {
+			document.getElementById('branch_id').value=results.bank_code;
+			document.getElementById('branchResults').innerHTML=results.bank_code;
+			document.getElementById('accountSelect').value=results.account_type;
+			document.getElementById('accountResults').innerHTML=results.account_type;
+			document.getElementById('branch_number').value=results.branch_number;
+			document.getElementById('card_number').value=results.account_number;
+			document.getElementById('name_front').value=results.surname;
+			document.getElementById('name_behind').value=results.name;
+		}
+
+		function branchList(results) {
+			var bankName = results.data;
+			for (var b=0; b<bankName.length; b++) {
+				var banknameAdd = {
+					id: bankName[b].bank_code,
+					value: bankName[b].bank_name
+				};
+				testarr.push(banknameAdd);
+			}
+			return testarr;
+		}
 		
 		function getBranchNumber() {
 			var branch_number = $("#branch_number").val();
@@ -195,6 +217,65 @@
 					type: 'div'
 			    });
 		    }
+		}
+		
+		function finish() {
+			var bank_code = $("#branch_id").val();
+			var account_type = $("#accountSelect").val();
+			var branch_number = $("#branch_number").val();
+			var account_number = $("#card_number").val();
+			var surname = $("#name_front").val();
+			var name = $("#name_behind").val();
+			if (bank_code == "") {
+				mui.toast(TextMessage.pleasebank, {
+					duration: 'long',
+					type: 'div'
+				});
+			}
+			if (account_type == "") {
+				mui.toast(TextMessage.pleaseAccount, {
+					duration: 'long',
+					type: 'div'
+				});
+			}
+			if (branch_number == "") {
+				mui.toast(TextMessage.branchNumberNull, {
+					duration: 'long',
+					type: 'div'
+				});
+			}
+			if (account_number == "") {
+				mui.toast(TextMessage.accountNumberNull, {
+					duration: 'long',
+					type: 'div'
+				});
+			}
+			if (surname == "" || name == "") {
+				mui.toast(TextMessage.namenotnull, {
+					duration: 'long',
+					type: 'div'
+				});
+			}
+			var params = {
+				"bank_code": bank_code,
+				"account_type": account_type,
+				"branch_number": branch_number,
+				"account_number": account_number,
+				"surname": surname,
+				"name": name
+	        };
+	        Repository.User.personal_finish(params, {
+				ok: function(data) {
+					Log.d("success");
+					mui.openWindow({
+						id: 'useredite',
+						url:"useredite.html"
+					});
+				},
+				ng: function(data) {
+					Log.d(data);
+				}
+			});
 		}
 	</script>
 </html>
