--- a/kankan/pages/main/user/useredite.html
+++ b/kankan/pages/main/user/useredite.html
@@ -155,7 +155,7 @@
 			$(".normal").html(unormalnum);
 			$(".bad").html(badnum);
 			$(".address").html(uaddress);
-			$("#nickname").val(uname);
+			$("#nickname").val(HTMLDecode(uname));
 			$(".point").html(user_point);
 			$(".maintitle").html(uname);
 			//$(".maintitle").attr("style","margin-left:-10%;");
