--- a/kankan/pages/setting/question.html
+++ b/kankan/pages/setting/question.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
-		<title></title>
+		<title>question page</title>
 		<link href="../../css/mui.min.css" rel="stylesheet" />
 		<link href="../../css/style.css" rel="stylesheet" />
 		<link href="../../css/kankan_home.css" rel="stylesheet" />
@@ -97,8 +97,10 @@
 			function showinfo(reaults){
 				var info=reaults.data[0];
 				var email=info.email;
+				if (checkEmail(email)) {
+					$("#email").val(email);
+				}
 				var fullname=info.full_name;
-				$("#email").val(email);
 			}
 			function inputblur(){
 				document.getElementById('full_name').blur();
@@ -114,6 +116,13 @@
 				var img3=$("#3").val();
 				if(full_name==""){
 					mui.toast(TextMessage.namenotnull, {
+						duration: 'long',
+						type: 'div'
+					});
+					return false;
+				}
+				if (email == "") {
+					mui.toast(TextMessage.input_email, {
 						duration: 'long',
 						type: 'div'
 					});
@@ -136,28 +145,24 @@
 					"images[3]":img3
 				};
 				mui.plusReady(function() {
-					if (!Repository.User.isEmptyEmail()) {
-						 return;
-					} else {
-						Repository.User.addComplaint(params2,{
-							ok: function(data) {
-								console.log("success");
-								mui.toast(TextMessage.requiresuccess, {
-									duration: 'long',
-									type: 'div'
-								});
-								mui.back();
-							},
-							ng: function(data) {
-								Api.callback_ng(data);
-								console.log("error:"+data);
-								Log.d(data);
-							},
-							error:function(){
-								error_tost.message();
-							}
-						});
-					}
+					Repository.User.addComplaint(params2,{
+						ok: function(data) {
+							console.log("success");
+							mui.toast(TextMessage.requiresuccess, {
+								duration: 'long',
+								type: 'div'
+							});
+							mui.back();
+						},
+						ng: function(data) {
+							Api.callback_ng(data);
+							console.log("error:"+data);
+							Log.d(data);
+						},
+						error:function(){
+							error_tost.message();
+						}
+					});
 				});
 			}
 			function clearallval(){
@@ -170,23 +175,47 @@
 				$(".z_images").remove();
 				//location.reload();
 			}
+			
+			// check email.
+			function checkEmail(email) {
+				if (email == "" || typeof(email) == "undefined" || email == null || !email) {
+					plus.nativeUI.alert(TextMessage.input_email, function(event) {
+						var index = event.index;
+						if (event.index == 0) {
+							mui.openWindow({
+								id: "emai_summate",
+								url: "/pages/login/emai_summate.html",
+								waiting: {
+									autoShow: false
+								},
+								show: {
+									duration: 200
+								},
+								extras: {
+									formPageName: "question"
+								}
+							});
+						}
+					}, TextMessage.sharetitle, TextMessage.yes);
+					return false;
+				}
+				return true;
+			}
+			
 			mui.plusReady(function() {
 				var self = plus.webview.currentWebview();
 				var email = self.email;
-				console.log("question.html email value is " + email);
-				if (email) {
-					var emailElement = document.getElementById('email');
-					emailElement.disabled = "";
-					emailElement.value = email;
+				if (email == "" || typeof(email) == "undefined") {
+					$('#email').removeAttr("disabled");
+				} else {
+					$('#email').val(email);
 				}
 				var params={};
 				Repository.User.Usercomplaint(params,{
 					ok: function(data) {
-						console.log("success");
 						showinfo(data);
 					},
 					ng: function(data) {
-						console.log("error:"+data);
 						Log.d(data);
 					}
 				});
