修改补全邮箱页面式样

--- a/kankan/pages/login/emai_summate.html
+++ b/kankan/pages/login/emai_summate.html
@@ -36,6 +36,9 @@
 				<div class="mui-content-padded">
 					<div id='send-verification-code' class="mui-btn mui-btn-block mui-btn-success lang" data-locale="send-verification-code"></div>
 				</div>
+				<div>
+					<label class="lang" style="color:#CF2D28;margin-left: 10px;" data-locale="reg_tips"></label>
+				</div>
 				<div class="mui-input-group">
 					<div class="mui-input-row">
 						<label class="lang" data-locale="verification-code"></label>
